<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
            <connections>
                <outlet property="loginBtn" destination="69h-c8-TuF" id="OWP-uw-uwL"/>
                <outlet property="nameTF" destination="acb-sZ-TFt" id="KBq-jW-oXb"/>
                <outlet property="passwordTF" destination="mBc-6K-8qJ" id="Qxf-3x-0vV"/>
                <outlet property="registerBtn" destination="hew-Wf-1Hv" id="VVX-yD-rFb"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeP-ya-eYc">
                    <rect key="frame" x="30" y="88" width="50" height="25"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="25" id="FBK-Ft-BOh"/>
                        <constraint firstAttribute="width" constant="50" id="f9I-Yx-qzH"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="input your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="acb-sZ-TFt">
                    <rect key="frame" x="103" y="83.5" width="254" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pwd:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RvT-8L-O4x">
                    <rect key="frame" x="29" y="152" width="45" height="25"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="25" id="3kv-Pv-aaF"/>
                        <constraint firstAttribute="width" constant="45" id="PAI-V4-gbR"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="input your passwords" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mBc-6K-8qJ">
                    <rect key="frame" x="97" y="147.5" width="264" height="34"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="34" id="5th-CT-RNk"/>
                        <constraint firstAttribute="width" constant="264" id="yGx-qi-4ka"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69h-c8-TuF">
                    <rect key="frame" x="271" y="231.5" width="90" height="30"/>
                    <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <state key="normal" title="login"/>
                    <connections>
                        <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="nkV-TE-P8c"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hew-Wf-1Hv">
                    <rect key="frame" x="97" y="231.5" width="90" height="30"/>
                    <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="90" id="3sR-LF-JSz"/>
                        <constraint firstAttribute="height" constant="30" id="fBc-Y6-6R7"/>
                    </constraints>
                    <state key="normal" title="register"/>
                    <connections>
                        <action selector="registerAction:" destination="-1" eventType="touchUpInside" id="Hzh-60-NWC"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="hew-Wf-1Hv" firstAttribute="top" secondItem="mBc-6K-8qJ" secondAttribute="bottom" constant="50" id="0QI-iW-IfQ"/>
                <constraint firstItem="69h-c8-TuF" firstAttribute="width" secondItem="hew-Wf-1Hv" secondAttribute="width" id="7TD-yn-8WS"/>
                <constraint firstItem="acb-sZ-TFt" firstAttribute="leading" secondItem="SeP-ya-eYc" secondAttribute="trailing" constant="23" id="8mt-sR-FO8"/>
                <constraint firstItem="acb-sZ-TFt" firstAttribute="centerY" secondItem="SeP-ya-eYc" secondAttribute="centerY" id="8nz-cj-mMY"/>
                <constraint firstItem="69h-c8-TuF" firstAttribute="height" secondItem="hew-Wf-1Hv" secondAttribute="height" id="Oh4-AV-avO"/>
                <constraint firstItem="SeP-ya-eYc" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="V3L-Hf-mLt"/>
                <constraint firstItem="SeP-ya-eYc" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="44" id="Xas-Y4-TTJ"/>
                <constraint firstItem="69h-c8-TuF" firstAttribute="trailing" secondItem="mBc-6K-8qJ" secondAttribute="trailing" id="b0H-hU-lQr"/>
                <constraint firstItem="mBc-6K-8qJ" firstAttribute="leading" secondItem="RvT-8L-O4x" secondAttribute="trailing" constant="23" id="bRH-7o-gob"/>
                <constraint firstItem="hew-Wf-1Hv" firstAttribute="leading" secondItem="mBc-6K-8qJ" secondAttribute="leading" id="eL0-M6-ixJ"/>
                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="acb-sZ-TFt" secondAttribute="trailing" constant="57" id="iN3-zk-W6P"/>
                <constraint firstItem="mBc-6K-8qJ" firstAttribute="centerY" secondItem="RvT-8L-O4x" secondAttribute="centerY" id="uxy-cw-Rx9"/>
                <constraint firstItem="RvT-8L-O4x" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="29" id="xCb-5H-3aJ"/>
                <constraint firstItem="RvT-8L-O4x" firstAttribute="top" secondItem="SeP-ya-eYc" secondAttribute="bottom" constant="39" id="xDu-EP-1py"/>
                <constraint firstItem="69h-c8-TuF" firstAttribute="centerY" secondItem="hew-Wf-1Hv" secondAttribute="centerY" id="xde-Pn-TRZ"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
            <point key="canvasLocation" x="131.8840579710145" y="152.67857142857142"/>
        </view>
    </objects>
</document>
