...
@implementation LanguageViewController

-(void)loadData{//添加controller
    self.dataArray = [NSMutableArray array];
    
    TestViewController *testVC = [TestViewController new];
    testVC.title = @"First Test";
    [self.dataArray addObject:testVC];
    
    for (int i = 0; i < 20; i++) {
        UIViewController *vc = [UIViewController new];
        vc.title = [NSString stringWithFormat:@"This is line %d row", i];
        [self.dataArray addObject:vc];
    }
}

- (void)viewDidLoad {
    [super viewDidLoad];
    self.navigationItem.title = @"language";
    [self loadData];
    
    self.myTableView.delegate = self;
    self.myTableView.dataSource = self;
    [self.myTableView registerClass:[UITableViewCell class] forCellReuseIdentifier:CELLID];
}
...
