...
- (void)viewDidLoad {
    [super viewDidLoad];
    // 添加子控制器
    [self addOneViewController:[[LanguageViewController alloc] init] image:@"tab_home_normal" selectedImage:@"tab_home_50" title:@"language"];
    [self addOneViewController:[[MyUIViewController alloc] init] image:@"tab_c2c_normal" selectedImage:@"tab_c2c_50" title:@"ui"];
    [self addOneViewController:[[SDKViewController alloc] init] image:@"tab_team_normal" selectedImage:@"tab_team_50" title:@"sdk"];
    [self addOneViewController:[[OtherViewController alloc] init] image:@"tab_mine_normal" selectedImage:@"tab_mine_50" title:@"other"];
}

//添加一个子控制器的方法
- (void)addOneViewController:(UIViewController *)childViewController image:(NSString *)imageName selectedImage:(NSString *)selectedImageName title:(NSString *)title {
    MyNavgationController *nav = [[MyNavgationController alloc] initWithRootViewController:childViewController];
    
...
